--- a/deno.jsonc
+++ b/deno.jsonc
@@ -4,5 +4,10 @@
     "fmt:check": "deno fmt --check ./**/*.ts",
     "check": "deno check ./**/*.ts",
     "lint": "deno lint ./**/*.ts"
+  },
+  "compilerOptions": {
+    "allowJs": true,
+    "lib": ["dom", "deno.window"],
+    "strict": true
   }
 }
